--- a/DSK822_Exam_Rabinson_Pariyar.ipynb
+++ b/DSK822_Exam_Rabinson_Pariyar.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "91e634d0-4898-4d45-94f9-982946cf3a18",
    "metadata": {
     "scrolled": true
@@ -64,14 +64,15 @@
      "text": [
       "\n",
       "Enter a news snippet (or type 'exit' to quit):\n",
-      " exit\n"
+      " Russian personnel with links to the country’s military and security services have engaged in spying in European waters while working covertly on ships carrying Russian oil, Western and Ukrainian intelligence sources exclusively told CNN.  Since the full-scale invasion of Ukraine in 2022, Moscow has built up a so-called shadow fleet of hundreds of tankers. These vessels carry Russia’s oil from its Baltic and Black Sea ports despite Western sanctions, earning the Kremlin hundreds of millions of dollars every year.  In recent months, some of these ships – often registered to unrelated countries – have acquired extra crew members shortly before leaving port, according to Ukrainian intelligence. CNN has seen two crew lists for these vessels in which the staff is predominantly non-Russian – but the documents also feature a pair of Russian names, and their Russian passport details, at the bottom of the roster.  The addition of Russians with security backgrounds to the crews of the shadow fleet is causing alarm in European capitals as it illustrates how brazen the Kremlin’s tactics have become.  Speaking to multiple intelligence sources, CNN has established that several of these men are employed by a secretive Russian company called Moran Security. Some of them are mercenaries, they said, who have previously worked for Russia’s private military contractors, such as the notorious Wagner group\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exiting the program.\n"
+      "\n",
+      "Prediction: Real News\n"
      ]
     }
    ],
@@ -251,6 +252,38 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "13de9b87-6b00-4482-aacb-01a6707f4d95",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bbe722b-88de-482d-92a0-dd0a9e643ca0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "391419a5-0e8c-438a-a0d0-a79ace346cf1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed45e66c-afdf-4c20-8045-228a0f3dcc9e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd822910-78bc-49dc-9967-7e79dbd412a1",
    "metadata": {},
    "outputs": [],
    "source": []
